comments now visible on the homepage; fixed an issue with the Post model; added date formatting function

--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -42,6 +42,10 @@ footer {
   margin-top: 20px; 
 }
 
+.sm-bottom-margin {
+  margin-bottom: 10px;
+}
+
 .navbar-brand {
   font-size: 2em;
   font-family: 'Leckerli One';
@@ -62,4 +66,6 @@ footer {
   border-radius: 15px;
 }
 
-
+.container {
+  margin-left: auto;
+}
